@@ -2,6 +2,7 @@ iLIST OF CHANGES FOR NPG-QC PACKAGE
 
  - db composition creation via a factory method autoqc
  - db loader - unused 'update' option removed
+ - saving a component with subset attribute value 'all' errors
 
 release 63.0
  - update script for deleting autoqc database results so that it
